# spacedisplay

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  appveyor-build.ps1  build-lnx.sh  build-win-mingw.sh  build-win-msvc14_x64.bat  build-win-msvc15_x64.bat  cmake_win_path.example.txt  qt5path.example.txt
.github/workflows/: ci.yaml  release.yaml
app-gui/: CMakeLists.txt
app-gui/include/: customstyle.h  customtheme.h  fileentrypopup.h  fileentryview.h  filetooltip.h  fileviewdb.h  inotifydialog.h  logdialog.h  mainapp.h  mainwindow.h  resources.h  spaceview.h  statusview.h  utils-gui.h
app-gui/src/: colortheme.cpp  customstyle.cpp  customtheme.cpp  fileentrypopup.cpp  fileentryview.cpp  filetooltip.cpp  fileviewdb.cpp  inotifydialog.cpp  logdialog.cpp  main.cpp  mainapp.cpp  mainwindow.cpp  resources.cpp  spaceview.cpp  statusview.cpp  utils-gui.cpp
ci/: appveyor-build.ps1  appveyor-build.sh  appveyor-install.sh  linux-build.sh  linux-coverage.sh  linux-install.sh
cmake-modules/: CodeCoverage.cmake
lib/: CMakeLists.txt  filedb.cpp  filedb.h  fileentry.cpp  fileentry.h  fileentrypool.cpp  fileentrypool.h  fileentrypopup.cpp  fileentrypopup.h  fileentryview.cpp  fileentryview.h  filepath.cpp  fileviewdb.h  mainwindow.cpp  resources.h  spacescanner.cpp  spacescanner.h  spaceview.cpp  spaceview.h  utils.cpp  utils.h
lib/include/: FileIterator.h  FileManager.h  LinuxFileIterator.h  PriorityCache.h  WinSpaceWatcher.h  filedb.h  fileentry.h  fileentrypool.h  filepath.h  logger.h  platformutils.h  spacescanner.h  spacewatcher-linux.h  spacewatcher-win.h  spacewatcher.h  utils.h
lib/private/: LinuxFileIterator.cpp  LinuxFileManager.cpp  LinuxPlatformUtils.cpp  LinuxSpaceWatcher.h  WinFileIterator.h  WinFileManager.cpp  WinPlatformUtils.cpp
lib/src/: LinuxSpaceWatcher.cpp  WinFileIterator.cpp  WinSpaceWatcher.cpp  filedb.cpp  fileentry.cpp  fileentrypool.cpp  filepath.cpp  logger.cpp  platformutils-nix.cpp  platformutils-win.cpp  spacescanner.cpp  spacewatcher-linux.cpp  spacewatcher-nix.cpp  spacewatcher-win.cpp  spacewatcher.cpp  utils.cpp
res/: CMakeLists.txt  resources.json  spacedisplay.desktop  win-res.rc
src/: CMakeLists.txt  colortheme.cpp  colortheme.h  fileentry.cpp  fileentry.h  fileentrypool.cpp  fileentrypool.h  fileentrypopup.cpp  fileentrypopup.h  fileentryshared.cpp  fileentryshared.h  fileentryview.cpp  fileentryview.h  filepath.cpp  filepath.h  icon.cpp  icon.h  main.cpp  mainwindow.cpp  mainwindow.h  platformutils-nix.cpp  platformutils-win.cpp  platformutils.h  resources.cpp  resources.h  spacescaner-nix.cpp  spacescaner-win.cpp  spacescanner.cpp  spacescanner.h  spaceview.cpp  spaceview.h  statusview.cpp  statusview.h  utils-nix.cpp  utils-win.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  DirHelper.cpp  DirHelper.h  FileDBTest.cpp  FileEntryTest.cpp  FileIteratorTest.cpp  FilePathTest.cpp  LoggerTest.cpp  PriorityCacheTest.cpp  ScannerTest.cpp  SpaceWatcherTest.cpp  UtilsTest.cpp  catch.cpp
